# cpplox

./: .clang-format  CMakeLists.txt  README.md
inc/: astprinter.h  common.h  environment.h  error.h  expr.h  interpreter.h  loxcallable.h  loxclass.h  loxerror.h  loxfunction.h  loxinstance.h  parser.h  resolver.h  rtexception.h  scanner.h  stmt.h  token.h  value.h  visitor.h
src/: astprinter.cpp  environment.cpp  error.cpp  interpreter.cpp  loxcallable.cpp  loxclass.cpp  loxerror.cpp  loxfunction.cpp  loxinstance.cpp  main.cpp  parser.cpp  resolver.cpp  scanner.cpp  value.cpp
testcase/: aa.lox  break.lox  class_02.lox  class_09.lox  clock.lox  compare.lox  forloop.lox  func_01.lox  func_02.lox  func_03.lox  func_04.lox  func_05.lox  hello.lox  if_stmt.lox  inheritance_03.lox  inheritance_04.lox  inheritance_07.lox  invalid_operate.lox  logical.lox  print_add.lox  synchronize.lox  var_define.lox  while.lox
